[project]
name = "comfyui_tensorrt2"
description = "TensorRT Node for ComfyUI\nThis node enables the best performance on NVIDIA RTX™ Graphics Cards  (GPUs) for Stable Diffusion by leveraging NVIDIA TensorRT."
version = "0.0.1"
license = "LICENSE"
dependencies = [
  "tensorrt==10.13.0.35",
  "tensorrt-cu12==10.13.0.35",
  "tensorrt-stubs==10.13.0.35.1",
  "onnx==1.20.1",
  "onnxruntime-gpu>=1.24.4",
  "psutil"
]

[project.urls]
Repository = "https://github.com/vovler/ComfyUI_TensorRT2"